# clash-bridge

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20260514000001_init.sql  20260514000002_redesign.sql  20260514000003_upstream_history.sql  20260518000001_fetch_via_exit_node.sql  20260621000001_upstream_format.sql  20260622000001_upstream_userinfo.sql
backend/src/: config.rs  error.rs  main.rs  middleware.rs  router.rs  state.rs
backend/src/auth/: handler.rs  jwt.rs  mod.rs  password.rs  turnstile.rs
backend/src/exit_node/: handler.rs  model.rs  repo.rs  service.rs
backend/src/generator/: mod.rs  model.rs  rules.rs  service.rs  yaml.rs
backend/src/generator/render/: base64.rs  clash.rs  mod.rs  quanx.rs  singbox.rs  surge.rs  uri_encode.rs
backend/src/history/: handler.rs  mod.rs  model.rs  repo.rs
backend/src/middleware/: mod.rs  rate_limit.rs
backend/src/parser/: base64sub.rs  mod.rs  sip008.rs  uri.rs
backend/src/profile/: auto_refresh.rs  handler.rs  mod.rs  model.rs  repo.rs  service.rs
backend/src/publish/: handler.rs
backend/src/user/: model.rs  repo.rs
deploy/: .env.example  .env.standalone.example  README.md  docker-compose.standalone.yml  docker-compose.yml
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-sidebar.tsx  history-dialog.tsx  node-picker.tsx  profile-editor.tsx  proxy-editor.tsx  qr-dialog.tsx  sub-links-dialog.tsx  turnstile.tsx  (+2 more)
(+18 files in other folders)
